Blog Add Survival Analysis

--- a/blog.html
+++ b/blog.html
@@ -149,6 +149,27 @@
 			  <div class="card_item">
 				<div class="card_inner">
 				  <div class="card_top">
+					<img src="/contents_resources/images/blog/survival-analysis.png" class="responsive" />
+				  </div>
+				  <div class="card_bottom">
+					<div class="card_info">
+					  <p class="title">Survival Analysis</p>
+					  <p>
+						Survival Analysis (Kaplan-Meier, Nelson-Aalen, Log-Rank-Test, Cox-Regression, Parametric models, AIC)
+						<a href="/contents/articles/Survival_Analysis.html" target="_blank">
+						<br> LINK</a>
+					</p>
+					</div>
+					<div class="card_category">＃Statistical Analysis</div>
+					<div class="card_creator">by jingwora</div>
+				  </div>
+				</div>
+			  </div>
+
+
+			  <div class="card_item">
+				<div class="card_inner">
+				  <div class="card_top">
 					<img src="/contents_resources/images/blog/object-detection.png" class="responsive" />
 				  </div>
 				  <div class="card_bottom">
