add reports supply chain management

--- a/projects.html
+++ b/projects.html
@@ -234,6 +234,28 @@
             </div>
             <br />
 
+            <!-- Supply Chain Management -->
+
+            <div class="card">
+              <h2>Supply chain management</h2>
+              <p>
+                <b>Solution:</b> To identify current status of invenotry and 
+                service level across supply chain level.
+                <br />
+                <b>Use case:</b> Operation report for supply chain management
+                 of large electric appliance manufacturer.
+              </p>
+              <a
+                href="/contents_resources/images/BI_supply_chain_management.png"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/BI_supply_chain_management.png"
+                  width="270"
+              /></a>
+            </div>
+            <br />
+
             <!-- Customer Transaction Analysis -->
 
             <div class="card">
