Knowledge add deepmind

--- a/knowledge.html
+++ b/knowledge.html
@@ -144,6 +144,11 @@
 														<td>Github repository contains an implementation of arbitrary style transfer running fully inside the browser using TensorFlow.js.</td>
 														<td><a href="https://github.com/reiinakano/arbitrary-image-stylization-tfjs" target="_blank">Link</a></td>
 													</tr>
+													<tr>
+														<td>DeepMind x UCL Lecture</td>
+														<td>Deep Learning Lectures | Intro to Machine Learning & AI</td>
+														<td><a href="https://www.youtube.com/watch?v=7R52wiUgxZI&list=PLqYmG7hTraZCDxZ44o4p3N5Anz3lLRVZF" target="_blank">Link</a></td>
+													</tr>
 												</tbody>
 											</table>
 										</div>
