Add code database

--- a/blog.html
+++ b/blog.html
@@ -272,10 +272,22 @@
 								<br>
 							SQL (Structured Query Language): Language used to acess, 
 								create, edit and managege database. 
-							</td>
-							<td>
+								<br>
 								<a href="contents/SQL/SQL.html" target="_blank">
-								LINK</a>
+								CODE</a>
+							</td>
+						</tr>
+					</tbody>
+
+					<tbody>
+						<tr>
+							<td>
+							<h2>Python for Database</h2>
+							<a href="contents/articles/MSSQLServer_pyodbc.html" target="_blank">
+							MSSQLServer_pyodbc </a>
+								<br>
+							<a href="contents/articles/MySQL_mysql-connector-python.html" target="_blank">
+							MySQL_mysql-connector-python</a>
 							</td>
 						</tr>
 					</tbody>
@@ -286,10 +298,12 @@
 								<img src="/contents_resources/icons/logo_mongodb.png" width="130">
 								<br>
 							MongoDB: A document database with the scalability and flexibility. 
-							</td>
-							<td>
-								<a href="contents/MongoDB/MongoDB.html" target="_blank">
-								LINK</a>
+							<br>
+							<a href="contents/MongoDB/MongoDB.html" target="_blank">
+							CODE</a>
+								<br>
+							<a href="contents/articles/MongoDB_pymongo.html" target="_blank">
+							pymongo</a>
 							</td>
 						</tr>
 					</tbody>
@@ -301,10 +315,9 @@
 								<br>
 							HTML (Hypertext Markup Language): Language  used to design 
 							display content in a web browser.
-							</td>
-							<td>
-								<a href="contents/HTML/HTML.html" target="_blank">
-								LINK</a>
+							<br>
+							<a href="contents/HTML/HTML.html" target="_blank">
+							CODE</a>
 							</td>
 						</tr>
 					</tbody>
@@ -315,10 +328,9 @@
 								<br>
 								CSS (Cascading Style Sheets): design language 
 								used to control sytle of content in a web browser.
-							</td>
-							<td>
+								<br>
 								<a href="contents/CSS/CSS.html" target="_blank">
-								LINK</a>
+								CODE</a>
 							</td>
 						</tr>
 					</tbody>
@@ -329,10 +341,9 @@
 								<br>
 								JS (Javascript): Scripting language used to create 
 								and control dynamic website content.
-							</td>
-							<td>
+								<br>
 								<a href="contents/JS/JS.html" target="_blank">
-								LINK</a>
+							    CODE</a>
 							</td>
 						</tr>
 					</tbody>
@@ -343,10 +354,9 @@
 								<br>
 								Pysaprk: Python API for Spark (distributed framework)
 								 that can handle Big Data analysis.
-							</td>
-							<td>
-								<a href="https://community.cloud.databricks.com/login.html" target="_blank">
-								LINK</a>
+								 <br>
+								 <a href="https://community.cloud.databricks.com/login.html" target="_blank">
+							     CODE</a>
 							</td>
 						</tr>
 					</tbody>
