update projects: demand pattern

--- a/projects.html
+++ b/projects.html
@@ -234,6 +234,27 @@
             </div>
             <br />
 
+            <!-- Demand pattern analysis -->
+
+            <div class="card">
+              <h2>Demand Pattern Analysis</h2>
+              <p>
+                <b>Solution:</b> To identify different pattern of demand trend.
+                <br />
+                <b>Use case:</b> Operation report for kpi analysis
+                 of large electric appliance manufacturer.
+              </p>
+              <a
+                href="/contents_resources/images/demand_pattern_analysis.png"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/demand_pattern_analysis.png"
+                  width="270"
+              /></a>
+            </div>
+            <br />
+
             <!-- Supply Chain Management -->
 
             <div class="card">
