projects add sentiment analysis

--- a/projects.html
+++ b/projects.html
@@ -255,6 +255,28 @@
             </div>
             <br />
 
+            <!-- Sentiment analysis -->
+
+            <div class="card">
+              <h2>Sentiment Analysis across customer journey</h2>
+              <p>
+                <b>Solution:</b> To understand customer satisfaction across customer journey.
+                <br />
+                <b>Use case:</b> Customer service department
+                 of large shipping company.
+              </p>
+              <a
+                href="/contents_resources/images/sentiment_analysis.png"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/sentiment_analysis.png"
+                  width="270"
+              /></a>
+            </div>
+            <br />
+
+
             <!-- Supply Chain Management -->
 
             <div class="card">
