blog add python application

--- a/blog.html
+++ b/blog.html
@@ -72,17 +72,17 @@
 				<div class="card_item">
 					<div class="card_inner">
 					  <div class="card_top">
-						<img src="/contents_resources/images/blog/facebook-embodied-agent.png" class="responsive" />
+						<img src="/contents_resources/images/blog/python-applications.png" class="responsive" />
 					  </div>
 					  <div class="card_bottom">
 						<div class="card_info">
-						  <p class="title">Facebook embodied agent</p>
-						  <p>ความสามารถใหม่ของ เอไอ จาก Facebook AI การเข้าใจสภาพแวดล้อม
-							<a href="https://medium.com/@jingwora/ai-%E0%B8%88%E0%B8%B0%E0%B8%AD%E0%B8%A2%E0%B8%B9%E0%B9%88%E0%B9%83%E0%B8%99%E0%B8%9A%E0%B9%89%E0%B8%B2%E0%B8%99%E0%B9%80%E0%B8%A3%E0%B8%B2%E0%B9%83%E0%B8%99%E0%B9%84%E0%B8%A1%E0%B9%88%E0%B8%8A%E0%B9%89%E0%B8%B2-%E0%B8%84%E0%B8%A7%E0%B8%B2%E0%B8%A1%E0%B8%AA%E0%B8%B2%E0%B8%A1%E0%B8%B2%E0%B8%A3%E0%B8%96%E0%B9%83%E0%B8%AB%E0%B8%A1%E0%B9%88%E0%B8%82%E0%B8%AD%E0%B8%87-%E0%B9%80%E0%B8%AD%E0%B9%84%E0%B8%AD-%E0%B8%88%E0%B8%B2%E0%B8%81-facebook-ai-%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B9%80%E0%B8%82%E0%B9%89%E0%B8%B2%E0%B9%83%E0%B8%88%E0%B8%AA%E0%B8%A0%E0%B8%B2%E0%B8%9E%E0%B9%81%E0%B8%A7%E0%B8%94%E0%B8%A5%E0%B9%89%E0%B8%AD%E0%B8%A1-fd96a1cd3ee4" target="_blank">
-							<br> LINK</a>
+						  <p class="title">Python Applications</p>
+						  <p>Collections of Python applications in various domains
+							<a href="/contents/articles/Python-Applications.html" target="_blank">
+						    <br> LINK</a>
 						  </p>
 						</div>
-						<div class="card_category">＃AI</div>
+						<div class="card_category">＃Python</div>
 						<div class="card_creator">by jingwora</div>
 					  </div>
 					</div>
