--- a/skills.html
+++ b/skills.html
@@ -190,7 +190,7 @@
 									<tbody>
 										<tr>
 											<td>
-											<b>Human Language</b> <br>
+											<b>Language</b> <br>
 											Thai               ★ ★ ★ ★ ★<br>
 											English            ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
 											Japanese           ★ ★ ★ <span style="color: gray;"> ★ ★</span> <br>
