Blog add data-augmentation

--- a/blog.html
+++ b/blog.html
@@ -187,7 +187,26 @@
 				</div>
 			  </div>
 
-			  
+			  <div class="card_item">
+				<div class="card_inner">
+				  <div class="card_top">
+					<img src="/contents_resources/images/blog/data-augmentation.png" class="responsive" />
+				  </div>
+				  <div class="card_bottom">
+					<div class="card_info">
+					  <p class="title">Image Data Augmentation</p>
+					  <p>
+						A technique that creates transformed image to improve the model.
+						<a href="/contents/articles/Data-Augmentation.html" target="_blank">
+						<br> LINK</a>
+					</p>
+					</div>
+					<div class="card_category">＃Deep Learning</div>
+					<div class="card_creator">by jingwora</div>
+				  </div>
+				</div>
+			  </div>
+						  
 			  <div class="card_item">
 				<div class="card_inner">
 				  <div class="card_top">
