--- a/blog.html
+++ b/blog.html
@@ -69,6 +69,26 @@
 		<div class="wrapper">
 			<div class="cards_wrap">
 
+
+				<div class="card_item">
+					<div class="card_inner">
+					  <div class="card_top">
+						<img src="/contents_resources/images/blog/feature-scaling.png" class="responsive" />
+					  </div>
+					  <div class="card_bottom">
+						<div class="card_info">
+						  <p class="title">Feature Scaling</p>
+						  <p>Summary of Scikit-learn feature scaling
+							<a href="/contents/articles/Feature-Scaling.html" target="_blank">
+						    <br> LINK</a>
+						  </p>
+						</div>
+						<div class="card_category">＃Python ＃日本語</div>
+						<div class="card_creator">by jingwora</div>
+					  </div>
+					</div>
+				</div>
+
 				<div class="card_item">
 					<div class="card_inner">
 					  <div class="card_top">
@@ -201,7 +221,7 @@
 						<br> LINK</a>
 					</p>
 					</div>
-					<div class="card_category">＃Deep Learning</div>
+					<div class="card_category">＃Deep Learning　#日本語</div>
 					<div class="card_creator">by jingwora</div>
 				  </div>
 				</div>
