--- a/skills.html
+++ b/skills.html
@@ -185,6 +185,16 @@
 										</tr>
 									</tbody>
 								</table>
+
+								<p>Certification</p>
+								<img src="images/Badges/CERT-Associate-Data-Analyst-600x600.png" style="width:150px;" alt="" />
+								<img src="images/Badges/azure-data-scientist-associate-600x600.png" style="width:150px;" alt="" />
+								<img src="images/Badges/azure-fundamentals-600x600 (1).png" style="width:150px;" alt="" />
+								<img src="images/Badges/azure-data-fundamentals-600x600.png" style="width:150px;" alt="" />
+								<img src="images/Badges/azure-ai-fundamentals-600x600.png" style="width:150px;" alt="" />
+								<img src="images/Badges/CERT-Fundamentals-Power-Platform.png" style="width:150px;" alt="" />
+								<br><br><br>
+
 								<p>Literacy</p>
 								<table class="alt">
 									<tbody>
