update link contents to blog

--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,7 @@
 					  <div class="card_bottom">
 						<div class="card_info">
 						  <p class="title">Feature Scaling</p>
-						  <p>Summary of Scikit-learn feature scaling
+						  <p>Summary of feature scaling.
 							<a href="/contents/articles/Feature-Scaling.html" target="_blank">
 						    <br> LINK</a>
 						  </p>
