--- a/projects.html
+++ b/projects.html
@@ -420,6 +420,22 @@
                   width="270"
               /></a>
             </div>
+            <br /><br />
+
+            <div class="card">
+              <h2>
+                Lucky Wheel
+              </h2>
+              <p>JS Sample</p>
+              <a
+                href="./contents/luckywheel/luckywheel.html"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/luckywheel.png"
+                  width="270"
+              /></a>
+            </div>
 
             <br /><br /><br />
           </div>
