--- a/contents/luckywheel/luckywheel.html
+++ b/contents/luckywheel/luckywheel.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Lucky Wheel Spinner for Workout</title>
+  <title>Lucky Wheel Spinner</title>
   <link rel="stylesheet" href="./luckywheel.css">
 
 </head>
