--- a/skills.html
+++ b/skills.html
@@ -193,6 +193,7 @@
 								<img src="images/Badges/azure-data-fundamentals-600x600.png" style="width:150px;" alt="" />
 								<img src="images/Badges/azure-ai-fundamentals-600x600.png" style="width:150px;" alt="" />
 								<img src="images/Badges/CERT-Fundamentals-Power-Platform.png" style="width:150px;" alt="" />
+								<img src="images/Badges/security-compliance-and-identity-fundamentals-600x600.png" style="width:150px;" alt="" />
 								<br><br><br>
 
 								<p>Literacy</p>
