--- a/skills.html
+++ b/skills.html
@@ -196,6 +196,73 @@
 								<img src="images/Badges/security-compliance-and-identity-fundamentals-600x600.png" style="width:100px;" alt="" />
 								<br><br><br>
 
+								<section>
+									<h1>📕 Special Training</h1>
+									<div class="table-wrapper">
+										<table class="alt">
+											<tbody>
+												<tr>
+													<td>
+														<img src="images/training/Spark-Logo.png" style="width:100px;" alt="" />
+														<font size="+2">Databricks Data Engineering</font>
+													</td>
+												</tr>
+												<tr>
+													<td>
+														<img src="images/training/Spark-Logo.png" style="width:100px;" alt="" />
+														<font size="+2">Machine Learning in Production MLflow and Model Deployment</font>
+													</td>													
+												</tr>
+												<tr>
+													<td>
+														<img src="images/training/Spark-Logo.png" style="width:100px;" alt="" />
+														<font size="+2">Generating Reliable Inventory Forecasts with Databricks</font>
+													</td>													
+												</tr>
+												<tr>
+													<td>
+														<img src="images/training/Spark-Logo.png" style="width:100px;" alt="" />
+														<font size="+2">Modernizing Financial Risk Management with Databricks</font>
+													</td>													
+												</tr>
+
+												<tr>
+													<td>
+														<img src="images/training/DAIS2021.png" style="width:100px;" alt="" />
+														<font size="+2">Lakehouse with deltalake</font>
+													</td>													
+												</tr>
+												<tr>
+													<td>
+														<img src="images/training/DAIS2021.png" style="width:100px;" alt="" />
+														<font size="+2">Hands-On Training for Data Science and Machine Learning</font>
+													</td>													
+												</tr>
+												<tr>
+													<td>
+														<img src="images/training/DAIS2021.png" style="width:100px;" alt="" />
+														<font size="+2">Scaling-ML-Pipelines</font>
+													</td>													
+												</tr>
+												<tr>
+													<td>
+														<img src="images/training/DAIS2021.png" style="width:100px;" alt="" />
+														<font size="+2">Scaling DL with TensorFlow and Apache Spark</font>
+													</td>													
+												</tr>
+												<tr>
+													<td>
+														<img src="images/training/DAIS2021.png" style="width:100px;" alt="" />
+														<font size="+2">Foundations of NLP at Scale</font>
+													</td>													
+												</tr>
+
+
+											</tbody>
+										</table>
+									</div>
+								</section>	
+
 								<p>Literacy</p>
 								<table class="alt">
 									<tbody>
