--- a/skills.html
+++ b/skills.html
@@ -157,15 +157,15 @@
 								<img src="images/nutshell.png" style="width:100px;" alt="" />
 
 								<h2 class="major">In a Nutshell</h2>
-								<p>Working Experience</p>
+								<h1>Working Experience</h1>
 								<table class="alt">
 									<tbody>
 										<tr>
 											<td>
 												<a href="https://www.worksid.co.jp/" target="_blank">
 													Works ID Co., Ltd. &#127760;</a> Japan <br>
-												Role: Data Science, BI Developer, Cloud Engineer<br>
-												2 years	(Present)										
+												Role: Senior Data Science, BI Developer, Cloud Engineer<br>
+												4 years	(Present)										
 											</td>
 										</tr>
 										<tr>									
@@ -186,7 +186,7 @@
 									</tbody>
 								</table>
 
-								<p>Certification</p>
+								<h1>Certification</h1>
 								<img src="images/Badges/CERT-Associate-Data-Analyst-600x600.png" style="width:150px;" alt="" />
 								<img src="images/Badges/azure-data-scientist-associate-600x600.png" style="width:150px;" alt="" />
 								<img src="images/Badges/azure-fundamentals-600x600 (1).png" style="width:100px;" alt="" />
@@ -197,7 +197,7 @@
 								<br><br><br>
 
 								<section>
-									<h1>📕 Special Training</h1>
+									<h1>Special Training</h1>
 									<div class="table-wrapper">
 										<table class="alt">
 											<tbody>
@@ -263,7 +263,7 @@
 									</div>
 								</section>	
 
-								<p>Literacy</p>
+								<h1>Literacy</h1>
 								<table class="alt">
 									<tbody>
 										<tr>
