Update knowledge python handbook

--- a/knowledge.html
+++ b/knowledge.html
@@ -92,7 +92,18 @@
 														<td>Powerapps Documents</td>
 														<td><a href="https://docs.microsoft.com/en-us/powerapps/powerapps-overview" target="_blank">Link</a></td>
 													</tr>
-												</tbody>
+												</tr>
+												<tr>
+													<td>Python</td>
+													<td>Python Data Science Handbook</td>
+													<td><a href="https://jakevdp.github.io/PythonDataScienceHandbook/" target="_blank">Link</a></td>
+												</tr>
+												<tr>
+													<td>Python</td>
+													<td>Python Data Science Handbook Notebooks</td>
+													<td><a href="https://github.com/jakevdp/PythonDataScienceHandbook/tree/master/notebooks" target="_blank">Link</a></td>
+												</tr>												
+											</tbody>
 											</table>
 										</div>
 									</section>
