Updat knowledge databricks academy github

--- a/knowledge.html
+++ b/knowledge.html
@@ -217,7 +217,14 @@
 													<tr>
 														<td>Delta</td>
 														<td>Delta API</td>
-														<td><a href="https://docs.microsoft.com/en-us/azure/databricks/delta/">Link</a></td>
+														<td><a href="https://docs.microsoft.com/en-us/azure/databricks/delta/" target="_blank">Link</a></td>
+													</tr>
+												</tbody>
+												<tbody>
+													<tr>
+														<td>Databricks Academy</td>
+														<td>Databricks Academy Github</td>
+														<td><a href="https://github.com/databricks-academy" target="_blank">Link</a></td>
 													</tr>
 												</tbody>
 											</table>
@@ -239,14 +246,14 @@
 													<tr>
 														<td>Tableau gallery</td>
 														<td>Collections of Tableau Visualization</td>
-														<td><a href="https://public.tableau.com/en-us/s/gallery">Link</a></td>
+														<td><a href="https://public.tableau.com/en-us/s/gallery" target="_blank">Link</a></td>
 													</tr>
 												</tbody>
 												<tbody>
 													<tr>
 														<td>AD Singel Sign on with Tableau Online</td>
 														<td>Tutorial: Azure Active Directory single sign-on (SSO) integration with Tableau Online.</td>
-														<td><a href="https://docs.microsoft.com/ja-jp/azure/active-directory/saas-apps/tableauonline-tutorial">Link</a></td>
+														<td><a href="https://docs.microsoft.com/ja-jp/azure/active-directory/saas-apps/tableauonline-tutorial" target="_blank">Link</a></td>
 													</tr>
 												</tbody>
 											</table>
