--- a/knowledge.html
+++ b/knowledge.html
@@ -165,6 +165,32 @@
 										</div>
 									</section>
 
+
+									<section>
+										<h1>📕 Recommendation System</h1>
+										<div class="table-wrapper">
+											<table class="alt">
+												<thead>
+													<tr>
+														<th>Titles</th>
+														<th>Details</th>
+													</tr>
+												</thead>
+												<tbody>
+                                                    <tr>
+							                  			<td>TensorFlow Recommender</td>
+										                <td>TensorFlow Recommenders is a library for building recommender system models using TensorFlow. [data preparation, model formulation, training, evaluation, and deployment] <br>
+															<a href="https://www.tensorflow.org/recommenders" target="_blank">Link</a> &nbsp &nbsp
+															<a href="https://www.tensorflow.org/recommenders/examples/quickstart" target="_blank">Quickstart</a> &nbsp &nbsp
+															<a href="https://github.com/tensorflow/recommenders" target="_blank">Github</a>
+														</td>
+									                </tr>
+								             </tbody>
+							            </table>
+						               </div>
+					                </section>
+									
+									
 									<section>
 										<h1>📕 Development Resources</h1>
 										<div class="table-wrapper">
