--- a/contacts.html
+++ b/contacts.html
@@ -20,6 +20,17 @@
 
 			gtag('config', 'G-HDYFX99SK4');
 		</script>
+
+		<!-- Global site tag (gtag.js) - Google Analytics GA4 -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GT87QLJBV"></script>
+		<script>
+		    window.dataLayer = window.dataLayer || [];
+		    function gtag(){dataLayer.push(arguments);}
+		    gtag('js', new Date());
+
+		    gtag('config', 'G-8GT87QLJBV');
+		</script>
+
 	</head>
 	<body class="is-preload">
 
