--- a/blog.html
+++ b/blog.html
@@ -24,16 +24,30 @@
 		<!-- Global site tag (gtag.js) - Google Analytics GA4 -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GT87QLJBV"></script>
 		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
+		    window.dataLayer = window.dataLayer || [];
+		    function gtag(){dataLayer.push(arguments);}
+		    gtag('js', new Date());
 
-		gtag('config', 'G-8GT87QLJBV');
+   		    gtag('config', 'G-8GT87QLJBV');
 		</script>
+
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+			})(window,document,'script','dataLayer','GTM-MQNS98W');</script>
+		<!-- End Google Tag Manager -->
+
 	</head>
 
 
 	<body class="is-preload">
+
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MQNS98W"
+			height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
