update skill - kaggle

--- a/skills.html
+++ b/skills.html
@@ -287,6 +287,32 @@
 									</div>
 								</section>	
 
+								<h1>Competitions</h1>
+								<table class="alt">
+									<tbody>
+										<tr>
+											<td>
+										    <img src="images/kaggle_-logo.svg" style="width:90px;" alt="" /> <br>
+											<a href="https://www.kaggle.com/jingwora1" target="_blank">
+												<img src="/images/jingwora.png" style="width:50px;" alt="" /> 
+												Kritdikoon Woraitthinan</a> <br>
+											<br>
+
+											<img src="images/kaggle-expert-w@192.png" style="width:50px;" alt="" /> 
+											Competition Expert  <br>
+											<font size="+2">RANK 1,543</font><br>
+											<br>
+
+											<img src="images/kaggle-bronzel@1x.png" style="width:20px;" alt="" /> 
+											Happywhale - Whale and Dolphin Identification <br>
+
+											<img src="images/kaggle-bronzel@1x.png" style="width:20px;" alt="" /> 
+											TensorFlow - Help Protect the Great Barrier Reef <br>
+										</tr>
+									</tbody>
+								</table>
+
+
 								<h1>Literacy</h1>
 								<table class="alt">
 									<tbody>
