update knowledge spark-nlp

--- a/knowledge.html
+++ b/knowledge.html
@@ -277,6 +277,27 @@
 														<td><a href="https://github.com/databricks-academy" target="_blank">Link</a></td>
 													</tr>
 												</tbody>
+												<tbody>
+													<tr>
+														<td>spark-nlp</td>
+														<td>-</td>
+														<td><a href="https://nlp.johnsnowlabs.com/">Link</a></td>
+													</tr>
+												</tbody>
+												<tbody>
+													<tr>
+														<td>spark-nlp-workshop</td>
+														<td>-</td>
+														<td><a href="https://github.com/JohnSnowLabs/spark-nlp-workshop/tree/master/tutorials/Certification_Trainings/Public">Link</a></td>
+													</tr>
+												</tbody>
+												<tbody>
+													<tr>
+														<td>spark-nlp Models Hub</td>
+														<td>-</td>
+														<td><a href="https://nlp.johnsnowlabs.com/models">Link</a></td>
+													</tr>
+												</tbody>
 											</table>
 										</div>
 									</section>									
