Update projects - add school management project

--- a/projects.html
+++ b/projects.html
@@ -416,6 +416,27 @@
             </div>
             <br />
 
+            <!-- School Management Report -->
+
+            <div class="card">
+              <h2>School Management Analytics</h2>
+              <p>
+                <b>Solution:</b> Tracking key KPIs of students and teachers from various sources.
+                Apply machine learning to reveal hideen insights 
+                <br />
+                <b>Use case:</b> Management team of Leading Public University Group
+              </p>
+              <a
+                href="/contents_resources/images/BI_school_management.png"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/BI_school_management.png"
+                  width="270"
+              /></a>
+            </div>
+            <br />
+
             <div class="card">
               <h2>Power BI: Visualiation Library</h2>
               <p>My knowledge sharing for community</p>
