--- a/projects.html
+++ b/projects.html
@@ -419,10 +419,10 @@
             <!-- School Management Report -->
 
             <div class="card">
-              <h2>School Management Analytics</h2>
+              <h2>University Management Analytics</h2>
               <p>
                 <b>Solution:</b> Tracking key KPIs of students and teachers from various sources.
-                Apply machine learning to reveal hideen insights 
+                Apply machine learning to reveal hiden insights 
                 <br />
                 <b>Use case:</b> Management team of Leading Public University Group
               </p>
