--- a/projects.html
+++ b/projects.html
@@ -63,6 +63,16 @@
           ><img src="/images/J_favicon/favicon.ico" width="20em"
         /></a>
         &emsp; PROJECTS
+         <!-- <div style="text-align:right">JP EN TH</div> -->
+        <button onclick="document.location = 'blog.html'"
+        style="width:60px; text-align:center;">EN</button>
+
+        <button onclick="document.location = 'blog.html'"
+        style="width:60px; text-align:center;">JP</button>
+
+        <button onclick="document.location = 'blog.html'"
+        style="width:60px; text-align:center;">TH</button>
+
       </h1>
       <nav>
         <a href="#menu">Menu</a>
@@ -417,6 +427,27 @@
             <br />
 
             <!-- School Management Report -->
+
+            <div class="card">
+              <h2>University Management Analytics</h2>
+              <p>
+                <b>Solution:</b> Tracking key KPIs of students and teachers from various sources.
+                Apply machine learning to reveal hiden insights 
+                <br />
+                <b>Use case:</b> Management team of Leading Public University Group
+              </p>
+              <a
+                href="/contents_resources/images/BI_school_management.png"
+                target="_blank"
+              >
+                <img
+                  src="/contents_resources/images/BI_school_management.png"
+                  width="270"
+              /></a>
+            </div>
+            <br />
+
+            <!-- App Analytics Report -->
 
             <div class="card">
               <h2>University Management Analytics</h2>
