--- a/projects.html
+++ b/projects.html
@@ -65,13 +65,13 @@
         &emsp; PROJECTS
          <!-- <div style="text-align:right">JP EN TH</div> -->
         <button onclick="document.location = 'blog.html'"
-        style="width:60px; text-align:center;">EN</button>
+        style="width:40px; padding-left:0px; padding-right:0px;">EN</button>
 
         <button onclick="document.location = 'blog.html'"
-        style="width:60px; text-align:center;">JP</button>
+        style="width:40px; padding-left:0px; padding-right:0px;">JP</button>
 
         <button onclick="document.location = 'blog.html'"
-        style="width:60px; text-align:center;">TH</button>
+        style="width:40px; padding-left:0px; padding-right:0px;">TH</button>
 
       </h1>
       <nav>
