--- a/blog.html
+++ b/blog.html
@@ -68,7 +68,8 @@
 								<li><a href="index.html">SAY HI!</a></li>
 								<li><a href="skills.html">SKILLS</a></li>
 								<li><a href="projects.html">PROJECTS</a></li>
-								<li><a href="blog.html">BLOG & CODE ESSENCE</a></li>
+								<li><a href="blog.html">BLOG</a></li>
+								<li><a href="tutorials.html">TUTORIALS</a></li>
 								<li><a href="knowledge.html">KNOWLEDGE</a></li>
 								<li><a href="contacts.html">GET IN TOUCH</a></li>
 							</ul>
@@ -315,196 +316,6 @@
 		  </div>
 		  <br>
 		  <br>
-
-
-		  <section>
-			<hr>
-			<br>
-			
-			<img src="contents_resources/icons/code_essence.png" width="50"><h1>CODE ESSENCE</h1>
-			<p>Collection of optimized code for production</p>
-
-		<section>
-			<div class="table-wrapper">
-				<table class="alt">
-
-					<tbody>
-						<tr>
-							<td>
-								<img src="/contents_resources/icons/logo_sql.png" width="50">
-								<br>
-							SQL (Structured Query Language): Language used to acess, 
-								create, edit and managege database. 
-								<br>
-								<a href="contents/SQL/SQL.html" target="_blank">
-								CODE</a>
-							</td>
-						</tr>
-					</tbody>
-
-					<tbody>
-						<tr>
-							<td>
-							<h2>Python for Database</h2>
-							<a href="contents/articles/MSSQLServer_pyodbc.html" target="_blank">
-							MSSQLServer_pyodbc </a>
-								<br>
-							<a href="contents/articles/MySQL_mysql-connector-python.html" target="_blank">
-							MySQL_mysql-connector-python</a>
-							</td>
-						</tr>
-					</tbody>
-
-					<tbody>
-						<tr>
-							<td>
-								<img src="/contents_resources/icons/logo_mongodb.png" width="130">
-								<br>
-							MongoDB: A document database with the scalability and flexibility. 
-							<br>
-							<a href="contents/MongoDB/MongoDB.html" target="_blank">
-							CODE</a>
-								<br>
-							<a href="contents/articles/MongoDB_pymongo.html" target="_blank">
-							pymongo</a>
-							</td>
-						</tr>
-					</tbody>
-					
-					<tbody>
-						<tr>
-							<td>
-								<img src="/contents_resources/icons/logo_html.png" width="50">
-								<br>
-							HTML (Hypertext Markup Language): Language  used to design 
-							display content in a web browser.
-							<br>
-							<a href="contents/HTML/HTML.html" target="_blank">
-							CODE</a>
-							</td>
-						</tr>
-					</tbody>
-					<tbody>
-						<tr>
-							<td>
-								<img src="/contents_resources/icons/logo_css.png" width="47">
-								<br>
-								CSS (Cascading Style Sheets): design language 
-								used to control sytle of content in a web browser.
-								<br>
-								<a href="contents/CSS/CSS.html" target="_blank">
-								CODE</a>
-							</td>
-						</tr>
-					</tbody>
-					<tbody>
-						<tr>
-							<td>
-								<img src="/contents_resources/icons/logo_js.png" width="51">
-								<br>
-								JS (Javascript): Scripting language used to create 
-								and control dynamic website content.
-								<br>
-								<a href="contents/JS/JS.html" target="_blank">
-							    CODE</a>
-							</td>
-						</tr>
-					</tbody>
-					<tbody>
-						<tr>
-							<td>
-								<img src="/contents_resources/icons/logo_spark.png" width="43">
-								<br>
-								Pysaprk: Python API for Spark (distributed framework)
-								 that can handle Big Data analysis.
-								 <br>
-								 <a href="https://community.cloud.databricks.com/login.html" target="_blank">
-							     CODE</a>
-							</td>
-						</tr>
-					</tbody>
-
-				</table>
-			</div>
-		</section>
-
-		<h2>PYTHON CODE ESSENCE</h2>
-
-		<section>
-			<div class="table-wrapper">
-				<table class="alt">
-
-					<tbody>
-						<tr>
-							<td>
-								<img src="/contents_resources/icons/logo_python.png" width="50">
-								<br>
-							    System Utility - Commands, Cloud Connection
-							    <br>
-								<a href="contents/Python/10_Sytem Utility.html" target="_blank">
-								LINK</a>
-								<br><br>
-							    Core python - Handle main python datatype 
-							    <br>
-								<a href="contents/Python/11_Python_core.html" target="_blank">
-								LINK</a>
-							</td>
-						</tr>
-					</tbody>
-					<tbody>
-						<tr>
-							<td>
-								<img src="/contents_resources/icons/data-preparation.png" width="170">
-								<br>
-								Numpy - Fundamental package to handle arrays with scidentific computing.
-								<br>
-								<a href="contents/Python/22_Numpy.html" target="_blank">LINK</a>
-								<br><br>
-								Pandas - Powerful and flexible data analysis and manipulation package.
-								<br>
-								<a href="contents/Python/23_Pandas.html" target="_blank">LINK</a>
-							</td>
-						</tr>
-					</tbody>
-					<tbody>
-						<tr>
-							<td>
-								<img src="/contents_resources/icons/machine-learning.png" width="150">
-								<br>
-								Scikit-learn - The most robust machine learning package.
-							    <br>
-								<a href="contents/Python/23_Pandas.html" target="_blank">
-								LINK</a>
-							</td>
-						</tr>
-					</tbody>
-					<tbody>
-						<tr>
-							<td>
-								<img src="/contents_resources/icons/deep-learning.png" width="150">
-								<br>
-								TensorFlow - Machine Learning and Deep Learning package with many extended packages.
-							    <br>
-								<a href="contents/Python/23_Pandas.html" target="_blank">
-								LINK</a>
-							</td>
-						</tr>
-					</tbody>
-					<tbody>
-						<tr>
-							<td>
-								<img src="/contents_resources/icons/web-scraping.png" width="150">
-								<br>
-								Beautiful Soup 4, Selenium, Requests, lxml, Scrapy
-							    <br>
-								<a href="https://github.com/jingwora/opencode-webscraping/tree/master/notebooks" target="_blank">
-								LINK</a>
-							</td>
-						</tr>
-					</tbody>				</table>
-			</div>
-		</section>
-
 
 		  <!-- bottom -->
 
