Fix naviation buttom

--- a/blog.html
+++ b/blog.html
@@ -325,7 +325,7 @@
 		  align-items: center;">
 			 <div style="display: inline-block;">
 				  <button onclick="document.location = 'projects.html'" style="width:80px;"> ＜ </button>　　　　　　　　
-				  <button onclick="document.location = 'knowledge.html'" style="width:80px;"> ＞ </button>  
+				  <button onclick="document.location = 'tutorials.html'" style="width:80px;"> ＞ </button>  
 			  </div>
 		  </div>
 
