--- a/tutorials.html
+++ b/tutorials.html
@@ -279,7 +279,7 @@
 		  flex-direction: column;
 		  align-items: center;">
 			 <div style="display: inline-block;">
-				  <button onclick="document.location = 'projects.html'" style="width:80px;"> ＜ </button>　　　　　　　　
+				  <button onclick="document.location = 'blog.html'" style="width:80px;"> ＜ </button>　　　　　　　　
 				  <button onclick="document.location = 'knowledge.html'" style="width:80px;"> ＞ </button>  
 			  </div>
 		  </div>
