--- a/knowledge.html
+++ b/knowledge.html
@@ -338,7 +338,7 @@
 									flex-direction: column;
 									align-items: center;">
 									   <div style="display: inline-block;">
-											<button onclick="document.location = 'blog.html'" style="width:80px;"> ＜ </button>　　　　　　　　
+											<button onclick="document.location = 'tutorials.html'" style="width:80px;"> ＜ </button>　　　　　　　　
 											<button onclick="document.location = 'contacts.html'" style="width:80px;"> ＞ </button>  
 										</div>
 									</div>
