Fix blog navigation button

--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1><a href="index.html"><img src="/images/J_favicon/favicon.ico" width="20em" >
-						</a>&emsp; BLOG & CODE ESSENCE</h1>						<nav>
+						</a>&emsp; BLOG</h1>						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
@@ -313,7 +313,7 @@
 			  </div>
 
 			</div>
-		  </div>
+
 		  <br>
 		  <br>
 
