Update blog and tutorial

--- a/tutorials.html
+++ b/tutorials.html
@@ -239,8 +239,7 @@
 									<br>
 									Scikit-learn - The most robust machine learning package.
 									<br>
-									<a href="contents/Python/23_Pandas.html" target="_blank">
-									LINK</a>
+									LINK (To be updated)
 								</td>
 							</tr>
 						</tbody>
@@ -251,8 +250,7 @@
 									<br>
 									TensorFlow - Machine Learning and Deep Learning package with many extended packages.
 									<br>
-									<a href="contents/Python/23_Pandas.html" target="_blank">
-									LINK</a>
+									LINK (To be updated)
 								</td>
 							</tr>
 						</tbody>
@@ -267,7 +265,8 @@
 									LINK</a>
 								</td>
 							</tr>
-						</tbody>				</table>
+						</tbody>				
+					</table>
 				</div>
 			</section>
 			
