--- a/blog.html
+++ b/blog.html
@@ -317,6 +317,38 @@
 		  <br>
 		  <br>
 
+		  <section>
+			<hr>
+			<br>
+			
+			<!-- <img src="contents_resources/icons/code_essence.png" width="50"><h1>MY TUTORIALS</h1>
+			<p>Collection of my codeTutorials like SQL, Python, Machine Learning, Deep Learning, ...</p> -->
+
+		<section>
+			<div class="table-wrapper">
+				<table class="alt">
+
+					<tbody>
+						<tr>
+							<td>
+								<img src="/contents/tutorial/img/s-analysis_logo_01.png" width="50">
+								<img src="/contents/tutorial/img/logo_white.png" width="200">
+								<br>
+							      Articles related to Data science, Machine Learning, Deep Learning and more... with explaination adn code. 
+								<br>
+								<a href="S-Analysis" target="_blank">
+									https://data-analysis-stats.jp/#blog</a>
+							</td>
+						</tr>
+					</tbody>
+
+				</table>
+			</div>
+		</section>
+
+		</section>
+
+
 		  <!-- bottom -->
 
 		  <div style="
