--- a/blog.html
+++ b/blog.html
@@ -336,8 +336,8 @@
 								<br>
 							      Articles related to Data science, Machine Learning, Deep Learning and more... with explaination adn code. 
 								<br>
-								<a href="S-Analysis" target="_blank">
-									https://data-analysis-stats.jp/#blog</a>
+								<a href="https://data-analysis-stats.jp/#blog" target="_blank">
+									data-analysis-stats.jp</a>
 							</td>
 						</tr>
 					</tbody>
